# db/entities/order.go
@@ -9,12 +9,12 @@ type Order struct {
 	gorm.Model
 	UserID          uint         `gorm:"column:user_id;type:int;not null;index"`
 	User            *User        `gorm:"foreignkey:user_id"`
-	FinalAmount     float64      `gorm:"column:final_amount;type:decimal(10,2);not null"`
-	DiscountAmount  float64      `gorm:"column:discount_amount;type:decimal(10,2);default:0"`
-	Amount          float64      `gorm:"column:amount;type:decimal(10,2);not null"`
+	TotalPrice      float64      `gorm:"type:decimal(10,2);default:0"`
 	Status          OrderStatus  `gorm:"column:status;type:varchar(255);default:'pending';"`
 	StatusChangedAt *time.Time   `gorm:"column:status_changed_at;type:timestamp;default:null"`
+	FinalPrice      float64      `gorm:"type:decimal(10,2);default:0"`
 	Items           []*OrderItem `gorm:"foreignkey:order_id"`
+	DiscountPrice   float64      `gorm:"type:decimal(10,2);default:0"`
 }
 
 func (Order) TableName() string {
