# internals/order/dto/req/create_order.go
@@ -1,0 +1,6 @@
+package dtoreq
+
+type CreateOrderReq struct {
+	UserID uint   `json:"-"`
+	Carts  []uint `json:"carts" validate:"required,dive,gte=1"`
+}
